--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         </article>
         <!-- about info -->
         <article class="about-info">
-          <!-- sectiontitle -->
+          <!-- section title -->
           <div class="section-title about-title">
-            <h2>about</h2>
+            <h2>About</h2>
             <div class="underline"></div>
           </div>
           <!-- end sectio title -->
@@ -269,19 +269,317 @@
 
     <!-- end of projects -->
     <!-- connect -->
-
+    <section class="connect">
+      <video
+        autoplay
+        muted
+        loop
+        class="video-container"
+        poster="images/project-1.jpeg"
+      >
+        <!-- <source src="videos/connect.mp4" type="video/mp4" /> -->
+        Sorry, your browser does not support embedded videos
+      </video>
+      <div class="video-banner">
+        <!-- sectiontitle -->
+        <div class="section-title">
+          <h2>let's get in touch</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- end sectio title -->
+        <p class="video-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat culpa
+          deleniti, consequuntur sint voluptatem deserunt obcaecati provident
+          repudiandae distinctio! Vel optio facilis et quae omnis aliquam
+          temporibus eum iste culpa!
+        </p>
+        <a href="contact.html" class="btn">contact me</a>
+      </div>
+    </section>
     <!-- end of connect -->
     <!-- skills -->
-
+    <section class="section skills">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>Skills</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end sectio title -->
+      <div class="section-center skills-center">
+        <article>
+          <h3>front end</h3>
+          <!-- single skill -->
+          <div class="skill">
+            <p>HTML/CSS</p>
+            <div class="skill-container">
+              <div class="skill-value value-50"></div>
+              <p class="skill-text skill-text-value-50">50%</p>
+            </div>
+          </div>
+          <!-- single skill -->
+          <div class="skill">
+            <p>javascript</p>
+            <div class="skill-container">
+              <div class="skill-value value-70"></div>
+              <p class="skill-text skill-text-value-70">70%</p>
+            </div>
+          </div>
+          <!-- single skill -->
+          <div class="skill">
+            <p>React</p>
+            <div class="skill-container">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-value-80">80%</p>
+            </div>
+          </div>
+        </article>
+        <article>
+          <h3>back end</h3>
+          <!-- single skill -->
+          <div class="skill">
+            <p>node</p>
+            <div class="skill-container">
+              <div class="skill-value value-50"></div>
+              <p class="skill-text skill-text-value-50">50%</p>
+            </div>
+          </div>
+          <!-- single skill -->
+          <div class="skill">
+            <p>php</p>
+            <div class="skill-container">
+              <div class="skill-value value-70"></div>
+              <p class="skill-text skill-text-value-70">70%</p>
+            </div>
+          </div>
+          <!-- single skill -->
+          <div class="skill">
+            <p>phyton</p>
+            <div class="skill-container">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-value-80">80%</p>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
     <!-- end of skills -->
     <!-- timeline -->
-
+    <section class="section timeline">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>timeline</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end sectio title -->
+      <div class="section-center timeline-center">
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2022</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">1</span>
+        </article>
+        <!-- End ofsingle timeline -->
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2021</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">2</span>
+        </article>
+        <!-- End ofsingle timeline -->
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2020</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">3</span>
+        </article>
+        <!-- End ofsingle timeline -->
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2018</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">4</span>
+        </article>
+        <!-- End ofsingle timeline -->
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2017</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">5</span>
+        </article>
+        <!-- End ofsingle timeline -->
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2015</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">6</span>
+        </article>
+        <!-- End ofsingle timeline -->
+        <!-- single timeline -->
+        <article class="timeline-item">
+          <h4>2014</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, non?
+          </p>
+          <span class="number">7</span>
+        </article>
+        <!-- End ofsingle timeline -->
+      </div>
+    </section>
     <!--end of  timeline -->
     <!-- blog -->
-
+    <section class="section bg-grey">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>blog</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end sectio title -->
+      <div class="section-center blog-center">
+        <!-- single article -->
+        <div class="card">
+          <!-- card front -->
+          <div class="card-side card-front">
+            <img src="images/project-1.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates quidem obcaecati harum a velit asperiores rerum
+                dolores vel, in possimus?
+              </p>
+              <div class="card-footer">
+                <img src="images/hero-img-small.jpeg" alt="author image" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- end card front -->
+          <div class="card-side card-back">
+            <div class="btn">read more</div>
+          </div>
+        </div>
+        <!-- end single article-->
+        <!-- single article -->
+        <div class="card">
+          <!-- card front -->
+          <div class="card-side card-front">
+            <img src="images/project-2.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates quidem obcaecati harum a velit asperiores rerum
+                dolores vel, in possimus?
+              </p>
+              <div class="card-footer">
+                <img src="images/hero-img-small.jpeg" alt="author image" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- end card front -->
+          <div class="card-side card-back">
+            <div class="btn">read more</div>
+          </div>
+        </div>
+        <!-- end single article-->
+        <!-- single article -->
+        <div class="card">
+          <!-- card front -->
+          <div class="card-side card-front">
+            <img src="images/project-3.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates quidem obcaecati harum a velit asperiores rerum
+                dolores vel, in possimus?
+              </p>
+              <div class="card-footer">
+                <img src="images/hero-img-small.jpeg" alt="author image" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- end card front -->
+          <div class="card-side card-back">
+            <div class="btn">read more</div>
+          </div>
+        </div>
+        <!-- end single article-->
+        <!-- single article -->
+        <div class="card">
+          <!-- card front -->
+          <div class="card-side card-front">
+            <img src="images/project-4.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates quidem obcaecati harum a velit asperiores rerum
+                dolores vel, in possimus?
+              </p>
+              <div class="card-footer">
+                <img src="images/hero-img-small.jpeg" alt="author image" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- end card front -->
+          <div class="card-side card-back">
+            <div class="btn">read more</div>
+          </div>
+        </div>
+        <!-- end single article-->
+      </div>
+    </section>
     <!--end of  blog -->
     <!-- footer -->
-
+    <footer class="footer">
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.twitter.com" class="social-icon">
+            <i class="fab fa-twitter"> </i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com" class="social-icon">
+            <i class="fab fa-facebook"> </i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com" class="social-icon">
+            <i class="fab fa-instagram"> </i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com" class="social-icon">
+            <i class="fab fa-linkedin"> </i>
+          </a>
+        </li>
+      </ul>
+      <p>&copy; <span id="date"></span> john doe. all rights</p>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
